RESOLVED FIXED276284
[Flex] Column flex container with vertical flex item and percent height fails.
https://bugs.webkit.org/show_bug.cgi?id=276284
Summary [Flex] Column flex container with vertical flex item and percent height fails.
alan
Reported 2024-07-06 08:16:00 PDT
see css/css-flexbox/flex-item-compressible-002.html
Attachments
[fast-cq]Patch (5.18 KB, patch)
2024-07-06 09:01 PDT, alan
no flags
alan
Comment 1 2024-07-06 09:01:46 PDT
Created attachment 471823 [details] [fast-cq]Patch
EWS
Comment 2 2024-07-06 18:47:20 PDT
Committed 280717@main (c994460e362b): <https://commits.webkit.org/280717@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 471823 [details].
Radar WebKit Bug Importer
Comment 3 2024-07-06 18:48:12 PDT
Note You need to log in before you can comment on or make changes to this bug.