[Flex] Column flex container with vertical flex item and percent height fails. https://bugs.webkit.org/show_bug.cgi?id=276284

Reviewed by Antti Koivisto.

Calling generic contentLogicalWidth() function to retrieve flex specific direction on the flex container is incorrect
as RenderBox::contentLogicalWidth is not a virtual function and it only takes writing mode into account
(as opposed to main axis direction).

With "flex-direction: column" and horizontal writing mode (where the main axis is the _height_ of the flex container)
we should not pass in "contentLogicalWidth" (cross axis dimension in this case) when trying to resolve percent height for
flex items.

* LayoutTests/imported/w3c/web-platform-tests/css/css-flexbox/flex-item-compressible-002-expected.txt:
* Source/WebCore/rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::computeMainAxisExtentForChild):

Canonical link: https://commits.webkit.org/280717@main